--- a/engine.cfg
+++ b/engine.cfg
@@ -1,8 +1,32 @@
 [application]
 
 name="teste_moviment"
-main_scene="res://scene/world.xml"
+main_scene="res://scene/tittle_screen.tscn"
 icon="res://icon.png"
+
+[autoload]
+
+global_player="*res://scripts/global_player.gd"
+global_enemy="*res://scripts/global_enemy.gd"
+globals="*res://scripts/globals.gd"
+
+[display]
+
+width=1024
+height=600
+fullscreen=true
+resizable=true
+
+[input]
+
+ui_left=[key(Left), jbutton(0, 14), jaxis(0, 0)]
+ui_right=[key(Right), jbutton(0, 15), jaxis(0, 1)]
+ui_up=[key(Up), jbutton(0, 12), jaxis(0, 2)]
+ui_down=[key(Down), jbutton(0, 13), jaxis(0, 3)]
+ataque1=[jbutton(0, 1), key(1)]
+sprint=[jbutton(0, 7)]
+enter=[key(Return), jbutton(0, 11)]
+game_quit=[jbutton(0, 10)]
 
 [physics_2d]
 
