--- a/engine.cfg
+++ b/engine.cfg
@@ -3,6 +3,7 @@
 name="RPG C8"
 main_scene="res://scene/tittle_screen.tscn"
 icon="res://icon.png"
+Icon=true
 
 [autoload]
 
@@ -13,8 +14,9 @@ globals="*res://scripts/globals.gd"
 
 [display]
 
-stretch_mode="viewport"
-stretch_aspect="expand"
+driver="GLES2"
+stretch_mode="2d"
+stretch_aspect="ignore"
 resizable=true
 height=1080
 width=1920
@@ -22,10 +24,11 @@ fullscreen=true
 
 [editor_plugins]
 
-enabled=["gut"]
+enabled=["GodotSTM", "ch.fischspiele.tilesethelper", "gut"]
 
 [image_loader]
 
+gen_mipmaps=false
 filter=false
 
 [input]
