--- a/export.cfg
+++ b/export.cfg
@@ -1,7 +1,7 @@
 [convert_images]
 
 action="none"
-compress_quality=0.7
+compress_quality=0.78
 formats="png"
 shrink=1.0
 
@@ -278,7 +278,7 @@ resources/pack_mode=0
 
 [platform:Windows Universal]
 
-architecture/target=2
+architecture/target=1
 capabilities/all_Joyn=false
 capabilities/appointments=false
 capabilities/blocked_Chat_Messages=false
@@ -321,12 +321,12 @@ orientation/landscape=true
 orientation/landscape_flipped=true
 orientation/portrait=true
 orientation/portrait_flipped=true
-package/description="Godot Engine"
-package/display_name=""
-package/publisher="CN=GodotEngine"
-package/publisher_display_name="Godot Engine"
-package/short_name="Godot"
-package/unique_name="Godot.Engine"
+package/description="C8"
+package/display_name="C8"
+package/publisher="João da Conceição"
+package/publisher_display_name="João da Conceição"
+package/short_name="C8"
+package/unique_name="C8"
 tiles/show_name_on_square150x150=false
 tiles/show_name_on_square310x310=false
 tiles/show_name_on_wide310x150=false
